[package]
name = "sentry-tunneler"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.6.20" }
dotenv = { version = "0.15.0", optional = true }
hyper = { version = "0.14.27", features = ["full"] }
reqwest = "0.11.20"
sentry-types = "0.31.7"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = []
dotenv = ["dep:dotenv"]
